--- a/Completed/01-Flexbox/Items/css/style.css
+++ b/Completed/01-Flexbox/Items/css/style.css
@@ -25,8 +25,8 @@ h1+div {
 div > div:nth-child(1) {
   background-color: darkorange;
   flex-basis: 10rem;
-  flex-grow: 0; /* default-value */
-  flex-shrink: 0; /* default-value */
+  flex-grow: 0; /* default-value is 0 */
+  flex-shrink: 0; /* default-value is 1 */
 }
 div > div:nth-child(2) {
   background-color: green;
